--- a/cs371pweek1blog.html
+++ b/cs371pweek1blog.html
@@ -6,6 +6,8 @@ layout: default
 
 <p>January 24, 2016</p>
 
+<p>First and foremost it should become obvious that this post is almost the same as my CS 373 post for week 1, the material taught in both in the first week were very much the same, if not identical. As the weeks go by I am sure that this will no longer be the case since the information taught will diverge from one another.</p>
+
 <p>This past week was a game of getting up on my feet and running for my last semester, theoretically speaking. This may end up being the most challenging semester I have had here at the University of Texas so it is a mental game which I have been preparing for. Besides the normal stuff of ordering books and trying to work out my school schedule I have particularly tried to prepare myself for this class by clearly understanding the outlines and the commitments that I must make in order to do well.</p>
 
 <p>Being a senior in my last semester as well as already having a job lined up may be the biggest obstacle in my way if laziness sets in. However I do not believe it will be much of an issue since I look forward to the information that will be presented and taught in this course, things which will help me at my new job.</p>
