Small changes made to first week blogs and picture size updated

--- a/cs373week1blog.html
+++ b/cs373week1blog.html
@@ -6,7 +6,7 @@ layout: default
 
 <p>January 24, 2016</p>
 
-<p>First and foremost it should become obvious that this post is almost the same as my CS 371P post for week 1, the material taught in both in the first week were very much the same, if not identical. As the weeks go by I am sure that this will no longer be the case since the information taught will diverge from one another.</p>
+<p>First and foremost it should become obvious that this post is almost the same as my CS 373 post for week 1, the material taught in both in the first week were very much the same, if not identical. As the weeks go by I am sure that this will no longer be the case since the information taught will diverge from one another.</p>
 
 <p>This past week was a game of getting up on my feet and running for my last semester, theoretically speaking. This may end up being the most challenging semester I have had here at the University of Texas so it is a mental game which I have been preparing for. Besides the normal stuff of ordering books and trying to work out my school schedule I have particularly tried to prepare myself for this class by clearly understanding the outlines and the commitments that I must make in order to do well.</p>
 
