Added week 4 blogs

--- a/cs373week3blog.html
+++ b/cs373week3blog.html
@@ -16,7 +16,7 @@ layout: default
 <p>This upcoming week will be full of school work and catching up from the weekend I had off (wedding and family stuff). I will also have to find a partner for both of my upcoming projects, which should be a good way to connect with some more CS students, something I do not do as much as I should.</p>
 
 <p>Class Experience</p>
-<p>Class this past week was much like the previous classes, however since we got deeper into the class material I had a bit more trouble on the quizzes. I am unsure of Python and some of its difference from other languages I am familiar with. I did get called on and I was luckily engaged so that I was able to answer the question asked</p>
+<p>Class this past week was much like the previous classes, however since we got deeper into the class material I had a bit more trouble on the quizzes. I am unsure of Python and some of its difference from other languages I am familiar with. I did get called on and I was luckily engaged so that I was able to answer the question asked.</p>
 
 <p>Tip-Of-The-Week</p>
 <p>A TOTW for this week is going to be to get breakfast every day. There are plenty of articles online about the benefits in health but also cognitive ability throughout the day. The following article is short and sweet but there are plenty more on the web.</p>
