updated blog posts for week 5

--- a/cs371pweek5blog.html
+++ b/cs371pweek5blog.html
@@ -7,7 +7,7 @@ layout: default
 <p>February 21, 2016</p>
 
 <p>What did you do this past week?</p>
-<p>This passed week was full of attacking the Netlfix project. The problem itself is fairly straightforward, but the method of actually solving the problem became a bit more of a concern. The data provided was enough to get the rmse below 1, but it took small tweaks to get it even further below an rmse of 1. I had spent lots of time this week in the GDC lab or atrium working on this project or the Voting project for Downing's Object Oriented Programming.</p>
+<p>This last week was working on the Voting project and getting closer with the tools that we were to use on the project. The problem was straight forward and it came to be that our initial solution already had a few small optimizations in it without actually considering them as optimizations. The project overall went well and we were able to get it accepted on UVa. I had spent lots of time this week in the GDC lab or atrium working on this project or the Netflix project for Downing's Software Engineering class.</p>
 
 <p>What's in your way?</p>
 <p>In my way for the week is ensuring that I start to prepare for the tests coming up and the projects as well. I have a little more free time this week, but I need to ensure that I spend it wisely and do not fiddle around. I also have my non-cs classes starting to ramp up, so preparing for those has also come to the front of my To Do list.</p>
