Fixed week 9 cs373 blog

--- a/cs373week9blog.html
+++ b/cs373week9blog.html
@@ -16,7 +16,7 @@ layout: default
 <p>This week I will ensure that I am on task so that I am able to get everything done. I will have to limit my free time and hobbies, but may reward myself a little if I am on task.</p>
 
 <p>Class Experience</p>
-<p>Class this week was very typical. We learned some more ins and outs of C++, especially about const and what it means in the various scenarios in which it can be used. It was familiar to me in most cases, but there were a few where it really opened up my eyes to what is actually going on. Ultimately giving me a better understanding.</p>
+<p>Class this week introduced something that I am almost completely foreign to, the backend. However, I did pick up the concepts fairly quickly. The Friday quiz did throw me for a bit of a loop but it was mostly because I did not review before class (which I typically do).</p>
 
 <p>Tip-Of-The-Week</p>
-<p>TOTW is to do something out of your comfort zone on projects if you get a chance. On projects, doing something I previously had no experience with has really opened up my eyes. I have found a lot of areas that I like in computer science by doing this. If you have always done front end, do some back end and vis versa.</p>
+<p>TOTW is to do something out of your comfort zone on projects if you get a chance. On projects, doing something I previously had no experience with has really opened up my eyes. I have found a lot of areas that I like in computer science by doing this. If you have always done front end, do some back end and vis versa. As you can see by my class experience, I fell in this exact situation this past week.</p>
