Updated index page

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ layout: default
 
 <h1>Blog-Posts</h1>
 
-<p>STUFF</p>
+<p>Here you are able to find my blog posts from Downing's Software Engineering and Object-Oriented Programming courses</p>
